--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import BusinessTabs from "../components/business/BusinessTabs";
   </head>
   <body>
     <!-- React solo en cliente -->
-    <App client:only="react">
+    <App client:load>
       <BusinessTabs client:only="react" />
     </App>
   </body>
