--- a/src/pages/comercios.astro
+++ b/src/pages/comercios.astro
@@ -1,22 +1,23 @@
 ---
-import "bootstrap/dist/css/bootstrap.min.css";
-import "../styles/leaflet.css";
-import "../styles/global.css";
 import BusinessWraper from "../wrappers/BusinessWraper";
 ---
 
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <title>AdLocal | Comercios</title>
     <link
       rel="icon"
       type="image/jpeg"
       sizes="32x32"
       href="https://uzgnfwbztoizcctyfdiv.supabase.co/storage/v1/object/public/Imagenes/AZuAXHqalTLlz8th7NMdBA-AZuAXHqaHD92HliWBxJzdA.jpg"
     />
-    <title>AdLocal</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   </head>
   <body>
+    <!-- Renderizamos el wrapper en cliente -->
     <BusinessWraper client:only="react" />
   </body>
 </html>
