--- a/.vercel/output/functions/_render.func/src/pages/index.astro
+++ b/.vercel/output/functions/_render.func/src/pages/index.astro
@@ -14,9 +14,10 @@ import BusinessWraper from "../wrappers/BusinessWraper";
       sizes="32x32"
       href="https://uzgnfwbztoizcctyfdiv.supabase.co/storage/v1/object/public/Imagenes/AZuAXHqalTLlz8th7NMdBA-AZuAXHqaHD92HliWBxJzdA.jpg"
     />
-    <title>AdLocal</title>
   </head>
   <body>
+
+    <!-- El componente real solo en cliente -->
     <BusinessWraper client:only="react" />
   </body>
 </html>
