--- a/src/pages/comercios/[slug].astro
+++ b/src/pages/comercios/[slug].astro
@@ -12,9 +12,14 @@ if (isNaN(id)) {
 
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comercio</title>
+    <meta charset="utf-8" />
+    <title>AdLocal | Comercios</title>
+    <link
+      rel="icon"
+      type="image/jpeg"
+      sizes="32x32"
+      href="https://uzgnfwbztoizcctyfdiv.supabase.co/storage/v1/object/public/Imagenes/AZuAXHqalTLlz8th7NMdBA-AZuAXHqaHD92HliWBxJzdA.jpg"
+    />
   </head>
   <body>
     <ComercioWraper id={id} client:only="react" />
