--- a/src/pages/comercios.astro
+++ b/src/pages/comercios.astro
@@ -12,7 +12,7 @@ import BusinessWraper from "../wrappers/BusinessWraper";
       sizes="32x32"
       href="https://uzgnfwbztoizcctyfdiv.supabase.co/storage/v1/object/public/Imagenes/AZuAXHqalTLlz8th7NMdBA-AZuAXHqaHD92HliWBxJzdA.jpg"
     />
-    <link rel="stylesheet" href="../../src/styles/global.css" />
+    <link rel="stylesheet" href="/src/styles/global.css" />
 
     <link
       rel="stylesheet"
