--- a/.vercel/output/functions/_render.func/src/pages/comercios/[slug].astro
+++ b/.vercel/output/functions/_render.func/src/pages/comercios/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import ComercioWraper from "../../wrappers/ComercioWraper";
 
-export const prerender = false; 
+export const prerender = false;
 const { slug } = Astro.params;
 const id = Number(slug?.split("_")[0]);
 
@@ -19,8 +19,10 @@ if (isNaN(id)) return Astro.redirect("/");
       sizes="32x32"
       href="https://uzgnfwbztoizcctyfdiv.supabase.co/storage/v1/object/public/Imagenes/AZuAXHqalTLlz8th7NMdBA-AZuAXHqaHD92HliWBxJzdA.jpg"
     />
-    <link rel="stylesheet" href="../../../src/styles/global.css" />
-    <link rel="stylesheet" href="../../../src/styles/leaflet.css" />
+
+    <link rel="stylesheet" href="/src/styles/global.css" />
+    <link rel="stylesheet" href="/src/styles/leaflet.css" />
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
