--- a/src/pages/comercios/[slug].astro
+++ b/src/pages/comercios/[slug].astro
@@ -21,7 +21,10 @@ if (isNaN(id)) return Astro.redirect("/");
       sizes="32x32"
       href="https://uzgnfwbztoizcctyfdiv.supabase.co/storage/v1/object/public/Imagenes/AZuAXHqalTLlz8th7NMdBA-AZuAXHqaHD92HliWBxJzdA.jpg"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=location_on"
+    />
     <link rel="stylesheet" href="/src/styles/global.css" />
     <link rel="stylesheet" href="/src/styles/leaflet.css" />
 
