--- a/src/pages/comercios.astro
+++ b/src/pages/comercios.astro
@@ -5,6 +5,7 @@ import BusinessWraper from "../wrappers/BusinessWraper";
 <html lang="es">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AdLocal | Comercios</title>
     <link
       rel="icon"
@@ -12,7 +13,7 @@ import BusinessWraper from "../wrappers/BusinessWraper";
       sizes="32x32"
       href="https://uzgnfwbztoizcctyfdiv.supabase.co/storage/v1/object/public/Imagenes/AZuAXHqalTLlz8th7NMdBA-AZuAXHqaHD92HliWBxJzdA.jpg"
     />
-    <link rel="stylesheet" href="/src/styles/global.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
 
     <link
       rel="stylesheet"
@@ -20,7 +21,10 @@ import BusinessWraper from "../wrappers/BusinessWraper";
     />
   </head>
   <body>
-    <!-- Renderizamos el wrapper en cliente -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"></script>
     <BusinessWraper client:only="react" />
   </body>
 </html>
