--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -7,8 +7,17 @@
     "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
 
+html,
 body {
-  margin: 0;
-  font-family: inherit;
-  background-color: #f5f5f5;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.slick-slider {
+  width: 100%;
+}
+
+.container,
+.container-fluid {
+  box-sizing: border-box;
 }
