--- a/src/pages/comercios/[slug].astro
+++ b/src/pages/comercios/[slug].astro
@@ -25,7 +25,7 @@ if (isNaN(id)) return Astro.redirect("/");
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=location_on"
     />
-    <link rel="stylesheet" href="/src/styles/global.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
     <link rel="stylesheet" href="/src/styles/leaflet.css" />
 
     <link
